--- a/AddModelProject/packages.config
+++ b/AddModelProject/packages.config
@@ -4,5 +4,7 @@
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net452" />
   <package id="FastMember.Signed" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
 </packages>
