--- a/DBFtoSQL2008Enterprise/packages.config
+++ b/DBFtoSQL2008Enterprise/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.91.0" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net452" />
+  <package id="FastMember.Signed" version="1.1.0" targetFramework="net452" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net452" />
   <package id="MigSharp" version="3.2.1" targetFramework="net452" />
