--- a/LotusNotes/packages.config
+++ b/LotusNotes/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AsyncDelegateCommand" version="1.0.3" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
+  <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
 </packages>
