--- a/Lotuslib/packages.config
+++ b/Lotuslib/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.91.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net452" />
+  <package id="FastMember.Signed" version="1.1.0" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
 </packages>
