Разработан алгоритм создения разных списков для автомата Autoit

--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationFramework" />
+    <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
