--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML">
+      <HintPath>..\..\..\..\Nuget\ClosedXML.0.91.0\lib\net452\ClosedXML.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
