--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConvettToXml\XmlConvert.cs" />
+    <Compile Include="Converts\ConvertXmlToXslx\ConvertXmltoXlsx.cs" />
+    <Compile Include="Converts\ConvettToXml\XmlConvert.cs" />
     <Compile Include="ErrorJurnal\ErrorJurnal.cs" />
     <Compile Include="ErrorJurnal\OkJurnal.cs" />
     <Compile Include="GenerateAtribyte\GeneratorAtribute.cs" />
@@ -57,6 +58,7 @@
       <DependentUpon>SnuOneForm.xsd</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOrWrite\LogicaXml\LogicaXml.cs" />
     <Compile Include="ReadOrWrite\XmlReadOrWrite.cs" />
   </ItemGroup>
   <ItemGroup />
