--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -55,9 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAutoit\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
-    <Compile Include="TestAutoit\SnuOneAuto\PublicCommand\CommandFormirovanie.cs" />
-    <Compile Include="TestAutoit\SnuOneAuto\PublicCommand\CommandSnuOneAuto.cs" />
+    <Compile Include="TestAutoit\Okp4\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
+    <Compile Include="TestAutoit\PublicCommand\CommandFormirovanie.cs" />
+    <Compile Include="TestAutoit\PublicCommand\CommandSnuOneAuto.cs" />
+    <Compile Include="TestAutoit\Reg\YtochnenieSved\AutoCommand\YtochnenieSved.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibaryAIS3Windows\LibaryAIS3Windows.csproj">
