--- a/LibaryAIS3Windows/LibaryAIS3Windows.csproj
+++ b/LibaryAIS3Windows/LibaryAIS3Windows.csproj
@@ -32,8 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoItX3.Assembly">
+    <Reference Include="AutoItX3.Assembly, Version=3.0.0.0, Culture=neutral, PublicKeyToken=a646454c8d475470, processorArchitecture=MSIL">
       <HintPath>C:\Nuget\AutoItX.Dotnet.3.3.14.2\lib\AutoItX3.Assembly.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,26 +52,18 @@
     <Compile Include="ButtonsClikcs\ButtonConstant.cs" />
     <Compile Include="ButtonsClikcs\ClikcCheker\Cheker.cs" />
     <Compile Include="ButtonsClikcs\KclicerButton.cs" />
+    <Compile Include="ButtonsClikcs\SelectQbe\SelectQbe.cs" />
     <Compile Include="ExitLogica\Exit.cs" />
     <Compile Include="ExitLogica\ExitClass.cs" />
     <Compile Include="Mode\Reg\Yvedomlenie\Yvedomlenia.cs" />
     <Compile Include="Mode\Okp4\SnuFormirovanie\SnuForm.cs" />
+    <Compile Include="Mode\Reg\ZemlyFpd\Zemly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWindow\Read\Reades.cs" />
     <Compile Include="Status\StatusAis.cs" />
+    <Compile Include="Window\Otdel\Reg\Fpd\FpdText.cs" />
     <Compile Include="Window\Otdel\Reg\Yvedomlenie\TextYvedomlenie.cs" />
     <Compile Include="Window\Windows.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="AutoItX3Lib">
-      <Guid>{F8937E53-D444-4E71-9275-35B64210CC3B}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
@@ -82,6 +75,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="C:\Nuget\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets" Condition="Exists('C:\Nuget\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('C:\Nuget\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets')" Text="$([System.String]::Format('$(ErrorText)', 'C:\Nuget\AutoItX.Dotnet.3.3.14.2\build\AutoItX.Dotnet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
