--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -54,10 +54,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventQbe\Reg\SelectEventQbe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAutoit\Okp4\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
     <Compile Include="TestAutoit\PublicCommand\CommandFormirovanie.cs" />
     <Compile Include="TestAutoit\PublicCommand\CommandSnuOneAuto.cs" />
+    <Compile Include="TestAutoit\Reg\TreatmentFPD\Zemly\Zemly.cs" />
     <Compile Include="TestAutoit\Reg\YtochnenieSved\AutoCommand\YtochnenieSved.cs" />
   </ItemGroup>
   <ItemGroup>
