--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -4,11 +4,13 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
+    <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
-    <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ИНН по схеме FpdReg.xsd-->
+    <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ФПД по схеме FpdReg.xsd-->
+    <add key="FileInnFull" value="XmlFile/InnFull.xml" /><!--Путь к файлу массовых ИНН по схеме FullInnCount.xsd-->
     <add key="FileJurnalError" value="XmlJurnal/InnError.xml" /><!--Путь к файлу Журналу ошибок по схеме ErrorJurnal.xsd-->
     <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" /><!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
-    <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование списка-->
+    <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование -->
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
