--- a/LibaryAIS3Windows/LibaryAIS3Windows.csproj
+++ b/LibaryAIS3Windows/LibaryAIS3Windows.csproj
@@ -52,15 +52,19 @@
     <Compile Include="ButtonsClikcs\ButtonConstant.cs" />
     <Compile Include="ButtonsClikcs\ClikcCheker\Cheker.cs" />
     <Compile Include="ButtonsClikcs\KclicerButton.cs" />
+    <Compile Include="ButtonsClikcs\SelectQbe\EventOkp\EventOkp.cs" />
     <Compile Include="ButtonsClikcs\SelectQbe\SelectQbe.cs" />
     <Compile Include="ExitLogica\Exit.cs" />
     <Compile Include="ExitLogica\ExitClass.cs" />
+    <Compile Include="Mode\Okp4\PravoZorI\Pravo.cs" />
     <Compile Include="Mode\Reg\Yvedomlenie\Yvedomlenia.cs" />
     <Compile Include="Mode\Okp4\SnuFormirovanie\SnuForm.cs" />
     <Compile Include="Mode\Reg\ZemlyFpd\Zemly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWindow\Read\Reades.cs" />
     <Compile Include="Status\StatusAis.cs" />
+    <Compile Include="Window\Otdel\Okp4\PravoZorI\PravoZorI.cs" />
+    <Compile Include="Window\Otdel\Okp4\Snu\SnuText.cs" />
     <Compile Include="Window\Otdel\Reg\Fpd\FpdText.cs" />
     <Compile Include="Window\Otdel\Reg\Yvedomlenie\TextYvedomlenie.cs" />
     <Compile Include="Window\Windows.cs" />
