--- a/ViewModelLib/ViewModelLib.csproj
+++ b/ViewModelLib/ViewModelLib.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ModelTestAutoit\PublicModel\QbeSelect\QbeClass.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ReportXlsx\ReportXlsx.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ReportXml\ReportJurnalProperty.cs" />
+    <Compile Include="ModelTestAutoit\PublicModel\SelectBranch\Branch.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelPage\AnotherCommandImplementation.cs" />
@@ -103,7 +104,7 @@
     <Compile Include="ViewModelPage\ViewModel\LinkCommutator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="ViewModelPage\packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
